# test_communication

./: CMakeLists.txt  README.md  devicecommunication.cpp  devicecommunication.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
